# lab1-cpp-bltpzdc

./: CMakeLists.txt  Graph.cpp  Graph.h  RandomGraphGenerator.cpp
charts/: cores.py  par_ser.py
tmp/: results.10.txt  results.12.txt  results.2.txt  results.4.txt  results.6.txt  results.8.txt  results.txt.debug  results.txt.release
